# day_statistic_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.yaml  docker-compose.base.yaml  docker-compose.local.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: config.py  main.py
app/common/: email.py  exceptions.py  fields.py  models.py  security.py
app/common/types/: __init__.py  errors.py  types.py
app/user/: dependencies.py
app/user/models/: sign_up.py  user.py
app/user/routers/: __init__.py  sign_up.py
etc/: hosts
etc/envs/: app.sign_up.env  app.user.env  mongodb.env  redis.env
tests/: conftest.py  test_base_app.py
tests/functional/: fixtures.py  test_sign_up.py
tests/unit/: test_types.py
