[tool.poetry]
name = "day_statistic_backend"
version = "0.1.0"
description = ""
authors = ["Levantin Oleg <levantin.oleg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pytest = "^7.1.2"
requests = "^2.28.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.4"
pyright = "^1.1.262"
ansible = "^6.2.0"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true
in-place = true
recursive = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
